--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,34 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     />
+    <link rel="manifest" href="./manifest.json" />
     <title>Platzi Conf Merch</title>
   </head>
   <body>
     <div id="app"></div>
   </body>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker
+          .register('service-worker.js')
+          .then(
+            function (registration) {
+              console.log(
+                'ServiceWorker registration successful with scope: ',
+                registration.scope
+              );
+            },
+            function (err) {
+              console.log('ServiceWorker registration failed: ', err);
+            }
+          )
+          .catch(function (err) {
+            console.log(err);
+          });
+      });
+    } else {
+      console.log('service worker is not supported');
+    }
+  </script>
 </html>
